--- a/ios/LifeDrop/Info.plist
+++ b/ios/LifeDrop/Info.plist
@@ -26,14 +26,13 @@
 	<true/>
 	<key>NSAppTransportSecurity</key>
 	<dict>
-	  <!-- Do not change NSAllowsArbitraryLoads to true, or you will risk app rejection! -->
 		<key>NSAllowsArbitraryLoads</key>
 		<false/>
 		<key>NSAllowsLocalNetworking</key>
 		<true/>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
@@ -48,5 +47,17 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>UIAppFonts</key>
+	<array>
+		<string>Outfit Black.ttf</string>
+		<string>Outfit ExtraBold.ttf</string>
+		<string>Outfit ExtraLight.ttf</string>
+		<string>Outfit Light.ttf</string>
+		<string>Outfit Medium.ttf</string>
+		<string>Outfit Regular.ttf</string>
+		<string>Outfit SemiBold.ttf</string>
+		<string>Outfit Thin.ttf</string>
+		<string>Outfit.ttf</string>
+	</array>
 </dict>
 </plist>
