--- a/package.json
+++ b/package.json
@@ -23,7 +23,11 @@
     "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.73.5",
+    "react-native-elements": "^3.4.3",
+    "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.15.0",
+    "react-native-maps": "^1.11.3",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
