--- a/package.json
+++ b/package.json
@@ -19,22 +19,26 @@
     "@react-navigation/material-bottom-tabs": "^6.2.26",
     "@react-navigation/native": "^6.1.14",
     "@react-navigation/stack": "^6.3.25",
+    "base-64": "^1.0.0",
     "expo-font": "^11.10.3",
     "firebase": "^10.8.1",
     "react": "18.2.0",
     "react-native": "0.73.5",
     "react-native-elements": "^3.4.3",
+    "react-native-fs": "^2.20.0",
     "react-native-geocoding": "^0.5.0",
     "react-native-geolocation-service": "^5.3.1",
     "react-native-gesture-handler": "^2.15.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-maps": "^1.11.3",
     "react-native-paper": "^5.12.3",
+    "react-native-push-notification": "^8.1.1",
     "react-native-qrcode-svg": "^6.3.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^15.1.0",
-    "react-native-vector-icons": "^10.0.3"
+    "react-native-vector-icons": "^10.0.3",
+    "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
