--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-svg": "^15.1.0",
+    "react-native-swipeable-row": "^0.8.1",
     "react-native-vector-icons": "^10.0.3",
     "rn-fetch-blob": "^0.12.0"
   },
